# aribas-random-seed-attack

./: Cargo.toml  build.rs  readme.md
crand/: CMakeLists.txt  crand.c  crand.lib  gcc_rand.c  make.bat  make.sh
src/: arib_rand.rs  bruteforce.rs  c_rand.rs  main.rs  next_prime.rs  rand.rs  rand2.rs  ranges.rs  tests.rs
